# limbo-rs

./: Cargo.toml  flake.nix
src/: animation.rs  bar.rs  battery.rs  components.rs  main.rs  message.rs  tray.rs
src/config/: types.rs
src/desktop_environment/: hyprland_desktop.rs  mod.rs  niri_desktop.rs
src/sections/: battery.rs  clock.rs  mod.rs  sysmon.rs
src/sections/quick_settings/: mod.rs  tray.rs
src/sections/workspaces/: mod.rs  state.rs
