[package]
name = "limbo"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
iced = { git = "https://github.com/stefanboca/iced_sctk", features = [
  "tokio",
  "image",
  "svg",
  "advanced",
] }
rust-embed = "8.7.2"
jiff = "0.2.15"

niri-ipc = { version = "25.5.1", optional = true }
hyprland = { version = "0.4.0-beta.2", optional = true }

[features]
default = ["hyprland", "niri"]
hyprland = ["dep:hyprland"]
niri = ["dep:niri-ipc"]
